Bug 812906 - Statically initialize GetIntrinsicValueInfo in IM. r=nicolas.b.pierron